<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/frame_create_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/app_logo_text_margin"
        android:layout_marginEnd="@dimen/app_logo_text_margin"
        android:layout_marginBottom="@dimen/field_padding_margin"
        android:layout_gravity="bottom">

        <include layout="@layout/item_image_display_section" />

        <EditText
            android:id="@+id/et_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_grey"
            android:hint="@string/full_name"
            android:inputType="text"
            android:maxLines="1"
            android:padding="@dimen/field_padding_margin"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/login_sign_up_text_size" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_grey"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="@dimen/field_padding_margin"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/login_sign_up_text_size" />

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_grey"
            android:hint="@string/user_name"
            android:inputType="text"
            android:maxLines="1"
            android:padding="@dimen/field_padding_margin"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/login_sign_up_text_size" />

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_grey"
            android:hint="@string/text_phone_required"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="@dimen/field_padding_margin"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/login_sign_up_text_size" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_grey"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/field_padding_margin"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/login_sign_up_text_size" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_grey"
            android:hint="@string/confirm_pass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/field_padding_margin"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/login_sign_up_text_size" />

        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_btn_bg"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/login_sign_up_text_size"
            android:padding="@dimen/field_padding_margin"/>

        <TextView
            android:id="@+id/tv_terms_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/field_padding_margin"
            android:textColor="@color/white"
            android:textSize="@dimen/login_sign_up_text_size" />

        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/field_padding_margin"
            android:textColor="@color/white"
            android:textSize="@dimen/login_sign_up_text_size" />


    </LinearLayout>




</FrameLayout>