...
    <string name="text_satellite_street">Satellite</string>
    <string name="text_outdoor">S.Street</string>
    <string name="mapbox_street">mapbox://styles/mapbox/streets-v11</string>
    <string name="mapbox_satellite">mapbox://styles/mapbox/satellite-streets-v11</string>
    <string name="mapbox_outdoor">mapbox://styles/mapbox/outdoors-v11</string>
    <string name="text_save">Save</string>
    <string name="email_not_valid">Please enter a valid email</string>
    <string name="text_enter_user_name">Please enter user name</string>
    <string name="text_enter_full_name">Please enter full name</string>
    <string name="sos_mail_confirmation">Are you sure you want to send an SoS Email to your emergency contacts?</string>
    <string name="sos_email">SoS email</string>
    <string name="text_delete_trip">Delete route</string>
    <string name="sure_delete_text">Are you sure about deleting this route?</string>
...
